--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "author": "Adalberto Rua and ...",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@polymer/app-layout": "^3.0.1",
+    "@polymer/iron-icons": "^3.0.1",
     "@polymer/paper-checkbox": "latest",
+    "@polymer/paper-icon-button": "^3.0.1",
+    "@polymer/paper-item": "^3.0.1",
+    "@polymer/paper-listbox": "^3.0.1",
+    "@polymer/paper-menu-button": "^3.0.1",
+    "@polymer/paper-tabs": "^3.0.1",
     "@polymer/polymer": "latest",
-    "@webcomponents/webcomponentsjs": "latest"
+    "@webcomponents/webcomponentsjs": "latest",
+    "web-animations-js": "^2.3.1"
   }
 }
