--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@polymer/app-layout": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
+    "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-checkbox": "latest",
     "@polymer/paper-icon-button": "^3.0.1",
     "@polymer/paper-item": "^3.0.1",
