--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "node src/app.js",
+    "postinstall": "bower install && gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
